Bug 462795 - systemsettings 5.24 fails to build
Summary: systemsettings 5.24 fails to build
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.24.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Nicolas Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-08 19:45 UTC by Fabian Vogt
Modified: 2023-01-04 20:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2022-12-08 19:45:57 UTC
[   81s] /home/abuild/rpmbuild/BUILD/systemsettings-5.24.7/app/main.cpp: In lambda function:
[   81s] /home/abuild/rpmbuild/BUILD/systemsettings-5.24.7/app/main.cpp:175:24: error: 'updateStartupId' is not a member of 'KWindowSystem'
[   81s]          KWindowSystem::updateStartupId(mainWindow->windowHandle());

That method was only introduced in 5.91, but 5.24 depends on 5.89.
Comment 2 Nate Graham 2023-01-04 20:47:47 UTC
Git commit a03cc21c7a1367a0fcc15fbd0a86ec8ff4fd75a0 by Nate Graham.
Committed on 03/01/2023 at 21:27.
Pushed by ngraham into branch 'Plasma/5.24'.

Only use KWindowSystem::updateStartupId if we have frameworks >= 5.91

That's the version when it was introduced, but Plasma 5.24 only
required 5.89 at launch.
FIXED-IN: 5.24.8

M  +4    -0    app/main.cpp

https://invent.kde.org/plasma/systemsettings/commit/a03cc21c7a1367a0fcc15fbd0a86ec8ff4fd75a0