Only use KWindowSystem::updateStartupId if we have frameworks >= 5.91

That's the version when it was introduced, but Plasma 5.24 only
required 5.89 at launch.

BUG: 462795
FIXED-IN: 5.24.8